<resources>
    <string name="app_name">MangaFeed</string>
    <string name="nav_bottom_title_catalog">Catalog</string>
    <string name="nav_bottom_title_download">Downloads</string>
    <string name="nav_bottom_title_account">Account</string>
    <string name="empty">""</string>


    <string name="password_regex"><![CDATA[^(?=.*?[a-z])(?=.*?[0-9]).{8,}$]]></string>
    <string name="email_regex"><![CDATA[^[a-zA-Z0-9]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$]]></string>
    <string name="password_requirements">Passwords must be at least 8 characters long and contain a lowercase, uppercase, and a number.</string>

    <string name="text_continue">Continue</string>
    <string name="text_start">Start</string>

    <string name="filter_empty_primary_text">Apply a filter</string>
    <string name="filter_empty_secondary_text">You haven\'t searched for anything</string>
    <!-- Preferences -->
    <string name="PREF_USER_SOURCE">SAVED_SOURCE</string>
    <string name="PREF_LOGGING_STATUS">PREF_LOGGING_STATUS</string>
    <string name="PREF_SAVE_LOGS">SAVE_LOGS</string>
    <string name="PREF_CHAPTER_SCROLL_VERTICAL">CHAPTER_SCROLL_VERTICAL</string>
    <string name="PREF_APP_LAYOUT_IS_GRID">APP_LAYOUT_IS_GRID</string>
    <string name="PREF_APP_THEME_IS_LIGHT">APP_THEME_IS_LIGHT</string>
    <string name="PREF_STORAGE_LOCATION">MangaPark</string>
    <string name="PREF_USER_EMAIL">PREF_USER_EMAIL</string>
    <string name="PREF_USER_NAME">PREF_USER_NAME</string>
    <string name="PREF_USER_ID">PREF_USER_ID</string>
    <string name="PREF_CHAPTER_SCREEN_ORIENTATION">PREF_CHAPTER_SCREEN_ORIENTATION</string>
    <string name="PREF_LAST_CATALOG_UPDATE">LAST_CATALOG_UPDATE_KEY</string>
    <string name="manga_info_label_author">Author</string>
    <string name="manga_info_label_artist">Artist</string>
    <string name="manga_info_label_genres">Genre(s)</string>
    <string name="manga_info_label_alternates">Alternates</string>
    <string name="manga_info_label_status">Status</string>
    <string name="manga_info_label_summary">Summary</string>

    <!-- Manga Info -->
    <string name="manga_info_header_fab_follow">Follow</string>
    <string name="manga_info_header_fab_unfollow">Un-Follow</string>
    <string name="manga_info_header_fab_on_hold">On-Hold</string>
    <string name="manga_info_header_fab_plan_to_read">Plan to read</string>
    <string name="manga_info_header_fab_complete">Completed</string>
    <string name="manga_info_header_fab_reading">Reading</string>


    <string name="manga_info_adapter_chapter_header_none">No chapters available</string>
    <string name="manga_info_adapter_chapter_header">Chapters</string>
    <string name="placeholder">Lorem Ipsum</string>
    <string name="placeholder_med">Loreum Ipsum Loreum Ipsum Loreum Ipsum Loreum Ipsum Loreum Ipsum Loreum Ipsum Loreum Ipsum</string>


    <string name="no_manga">No Manga</string>
    <string name="all_no_manga_message">We had a problem loading this sources catalog.</string>
    <string name="recent_no_manga_message">We had a problem loading this sources recent updates.</string>
    <string name="library_no_manga_message">It seem\'s your library is empty, check out the other sections.</string>
    <string name="text_stop_sync">Stop Sync</string>
    <string name="text_start_sync">Start Sync</string>
    <string name="single_dot">•</string>
    <string name="manage">Manage</string>
    <string name="sources">Sources</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_error_404">User not found. Try signing up!</string>
    <string name="login_error">Failed to login, please verify your information and try again.</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="login_error_invalid_email">Please input a valid email</string>
    <string name="login_error_invalid_password">Password does not meet the criteria</string>
    <string name="guest">Guest</string>

    <string-array name="sources_array">
        <item>ReadLight</item>
        <item>FunManga</item>
        <item>MangaEden</item>
        <item>MangaHere</item>
    </string-array>
</resources>
