<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/background_color"
    android:padding="10dp"
    android:id="@+id/relativeLayoutMangaInfoHeaderContainer">

    <LinearLayout
        android:id="@+id/linearLayoutMangaInfoHeaderContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewMangaInfoHeader"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="?attr/background_color"
            android:scaleType="fitXY"
            android:src="@drawable/test_image" />

        <LinearLayout
            android:id="@+id/manga_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMangaInfoHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="8dp"
                android:textAlignment="gravity"
                android:textColor="@color/manga_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manga_info_label_summary"
                    android:textColor="@color/manga_white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewMangaInfoDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="?attr/text_color2"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/manga_info_label_author"
                        android:textColor="?attr/text_color"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="5" />

                    <TextView
                        android:id="@+id/textViewMangaInfoHeaderAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text=""
                        android:textAlignment="gravity"
                        android:textColor="?attr/text_color2"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/manga_info_label_artist"
                        android:textColor="?attr/text_color"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="5" />

                    <TextView
                        android:id="@+id/textViewMangaInfoHeaderArtist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text=""
                        android:textAlignment="gravity"
                        android:textColor="?attr/text_color2"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/manga_info_label_genres"
                        android:textColor="?attr/text_color"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="5" />

                    <TextView
                        android:id="@+id/textViewMangaInfoHeaderGenres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text=""
                        android:textAlignment="gravity"
                        android:textColor="?attr/text_color2"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/manga_info_label_alternates"
                        android:textColor="?attr/text_color"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="5" />

                    <TextView
                        android:id="@+id/textViewMangaInfoHeaderAlternates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text=""
                        android:textAlignment="gravity"
                        android:textColor="?attr/text_color2"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/manga_info_label_status"
                        android:textColor="?attr/text_color"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="5" />

                    <TextView
                        android:id="@+id/textViewMangaInfoHeaderStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text=""
                        android:textAlignment="gravity"
                        android:textColor="?attr/text_color2"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewMangaInfoHeaderChapterLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutMangaInfoHeaderContainer"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="Chapters"
        android:textColor="?attr/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/famMangaInfoHeaderFollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_fab_size="normal"
        app:menu_icon="@drawable/ic_heart_outline_white_24dp"
        app:menu_labels_position="right"
        app:menu_openDirection="down">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabMangaInfoFollowUnFollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_label="@string/manga_info_header_fab_unfollow"
            android:src="@drawable/ic_heart_outline_white_24dp"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabMangaInfoFollowOnHold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/manga_red"
            fab:fab_colorPressed="@color/manga_red"
            fab:fab_label="@string/manga_info_header_fab_on_hold"
            android:src="@drawable/ic_heart_white_24dp"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabMangaInfoFollowPlanToRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/manga_gray"
            fab:fab_colorPressed="@color/manga_gray"
            fab:fab_label="@string/manga_info_header_fab_plan_to_read"
            android:src="@drawable/ic_heart_white_24dp"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabMangaInfoFollowComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/manga_green"
            fab:fab_colorPressed="@color/manga_green"
            fab:fab_label="@string/manga_info_header_fab_complete"
            android:src="@drawable/ic_heart_white_24dp"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabMangaInfoFollowReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/manga_blue"
            fab:fab_colorPressed="@color/manga_blue"
            fab:fab_label="@string/manga_info_header_fab_reading"
            android:src="@drawable/ic_heart_white_24dp"
            fab:fab_size="mini"
            />

    </com.github.clans.fab.FloatingActionMenu>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/famMangaInfoHeaderContinueReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="130dp"
        android:background="@drawable/circle_blue"
        android:src="@drawable/ic_play_white_24dp"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_size="normal" />

</RelativeLayout>